--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Carrito de compras</title>
   </head>
-  <body class="bg-dark">
+  <body class="bg-light">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
